--- a/dashboard.html
+++ b/dashboard.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>數據監控 Dashboard</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>📈 數據監控 Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
   <style>
-    /* === 略，樣式與你原版相同 === */
-    * {margin:0;padding:0;box-sizing:border-box;}
-    body {font-family:'Noto Sans TC',sans-serif;background:linear-gradient(135deg,#FFF8F0,#F7E6DC);color:#6B5D54;min-height:100vh;}
-    .header{background:linear-gradient(135deg,#FFB4AE,#F4A6A0);color:white;padding:20px;text-align:center;box-shadow:0 4px 20px rgba(244,166,160,0.3);}
-    .container{max-width:1200px;margin:0 auto;padding:20px;}
-    .stats-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:16px;margin-bottom:24px;}
-    .stat-card{background:linear-gradient(135deg,#FFFFFF,#FFF8F0);padding:18px;border-radius:12px;box-shadow:0 4px 12px rgba(244,166,160,0.15);text-align:center;border:1px solid rgba(244,166,160,0.1);}
-    .stat-number{font-size:28px;font-weight:800;color:#F4A6A0;margin-bottom:8px;}
-    .stat-label{font-size:14px;color:#9B8D84;}
-    .charts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:18px;margin-bottom:24px;}
-    .chart-card{background:linear-gradient(135deg,#FFFFFF,#FFF8F0);padding:20px;border-radius:12px;box-shadow:0 4px 12px rgba(244,166,160,0.15);}
-    .realtime-section{background:linear-gradient(135deg,#FFFFFF,#FFF8F0);padding:20px;border-radius:12px;box-shadow:0 4px 12px rgba(244,166,160,0.15);}
-    .realtime-number{font-size:20px;font-weight:700;color:#F4A6A0;}
-    .error{background:#f8d7da;color:#721c24;padding:15px;border-radius:10px;margin:20px 0;}
-    .refresh-btn{background:linear-gradient(135deg,#FFB4AE,#F4A6A0);color:white;padding:12px 24px;border-radius:25px;border:none;cursor:pointer;font-weight:600;}
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { font-family:'Noto Sans TC',sans-serif; background:linear-gradient(135deg,#FFF8F0,#F7E6DC); color:#6B5D54; min-height:100vh; }
+    .header { background:linear-gradient(135deg,#FFB4AE,#F4A6A0); color:white; padding:20px; text-align:center; box-shadow:0 4px 20px rgba(244,166,160,0.3); }
+    .container { max-width:1200px; margin:0 auto; padding:20px; }
+    .stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:16px; margin-bottom:24px; }
+    .stat-card { background:linear-gradient(135deg,#FFFFFF,#FFF8F0); padding:18px; border-radius:12px; box-shadow:0 4px 12px rgba(244,166,160,0.15); text-align:center; border:1px solid rgba(244,166,160,0.1); }
+    .stat-number { font-size:28px; font-weight:800; color:#F4A6A0; margin-bottom:8px; }
+    .stat-label { font-size:14px; color:#9B8D84; }
+    .charts-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(350px,1fr)); gap:18px; margin-bottom:24px; }
+    .chart-card { background:linear-gradient(135deg,#FFFFFF,#FFF8F0); padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(244,166,160,0.15); }
+    .realtime-section { background:linear-gradient(135deg,#FFFFFF,#FFF8F0); padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(244,166,160,0.15); }
+    .realtime-number { font-size:20px; font-weight:700; color:#F4A6A0; }
+    .error { background:#f8d7da; color:#721c24; padding:15px; border-radius:10px; margin:20px 0; }
+    .refresh-btn { background:linear-gradient(135deg,#FFB4AE,#F4A6A0); color:white; padding:12px 24px; border-radius:25px; border:none; cursor:pointer; font-weight:600; box-shadow:0 4px 10px rgba(244,166,160,0.2); transition:transform 0.2s; }
+    .refresh-btn:hover { transform:scale(1.05); }
+    .event-item { padding:8px 0; border-bottom:1px solid #eee; }
+    .event-name { font-weight:600; color:#F4A6A0; }
+    .loading { text-align:center; color:#9B8D84; padding:10px; }
   </style>
 </head>
+
 <body>
   <div class="header">
     <h1>📊 數據監控 Dashboard</h1>
@@ -42,126 +46,201 @@
       <div class="stat-card"><div class="stat-number" id="todayUsers">-</div><div class="stat-label">今日用戶</div></div>
     </div>
 
-    <!-- 圖表 -->
+    <!-- 圖表區 -->
     <div class="charts-grid">
-      <div class="chart-card"><div class="chart-title">熱門事件</div><canvas id="topEventsChart"></canvas></div>
-      <div class="chart-card"><div class="chart-title">頁面瀏覽統計</div><canvas id="pageViewsChart"></canvas></div>
-      <div class="chart-card"><div class="chart-title">測驗結果分布</div><canvas id="quizResultsChart"></canvas></div>
-      <div class="chart-card"><div class="chart-title">今日事件趨勢</div><canvas id="hourlyEventsChart"></canvas></div>
+      <div class="chart-card"><h3>熱門事件</h3><canvas id="topEventsChart"></canvas></div>
+      <div class="chart-card"><h3>頁面瀏覽統計</h3><canvas id="pageViewsChart"></canvas></div>
+      <div class="chart-card"><h3>測驗結果分布</h3><canvas id="quizResultsChart"></canvas></div>
+      <div class="chart-card"><h3>今日事件趨勢</h3><canvas id="hourlyEventsChart"></canvas></div>
     </div>
 
     <!-- 實時資料 -->
     <div class="realtime-section">
-      <div class="realtime-title">🟢 實時數據</div>
+      <h3>🟢 實時數據</h3>
       <div class="realtime-stats">
-        <div class="realtime-stat"><div class="realtime-number" id="recentEvents">-</div><div class="realtime-label">最近5分鐘事件</div></div>
-        <div class="realtime-stat"><div class="realtime-number" id="onlineUsers">-</div><div class="realtime-label">在線用戶</div></div>
+        <div><div class="realtime-number" id="recentEvents">-</div><div>最近5分鐘事件</div></div>
+        <div><div class="realtime-number" id="onlineUsers">-</div><div>在線用戶</div></div>
       </div>
-      <div class="chart-title">最近事件</div>
-      <div class="event-list" id="recentEventList"><div class="loading">載入中...</div></div>
+      <h4 style="margin-top:10px;">最近事件</h4>
+      <div id="recentEventList" class="event-list"><div class="loading">載入中...</div></div>
     </div>
   </div>
 
   <script>
-    // 🌐 自動判斷後端環境
-    const API_BASE = window.location.hostname.includes('github.io')
-      ? 'https://mindtest-backend.onrender.com'
-      : 'http://localhost:3000';
+    // ✅ 自動偵測後端環境
+    const API_BASE = (() => {
+      const host = window.location.hostname;
+      if (host.includes('localhost')) return 'http://localhost:3000';
+      return 'https://mindtest-backend.onrender.com';
+    })();
 
     Chart.register(ChartDataLabels);
     let charts = {};
 
-    // 儀表板資料
+    // 🧩 共用 fetch 函數
+    async function fetchAPI(endpoint) {
+      try {
+        const res = await fetch(`${API_BASE}${endpoint}`);
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        return await res.json();
+      } catch (err) {
+        showError(`載入失敗：${err.message}`);
+        console.error(`❌ ${endpoint} error:`, err);
+        return null;
+      }
+    }
+
+    // 📊 載入儀表板資料
     async function loadDashboardData() {
-      try {
-        const res = await fetch(`${API_BASE}/api/dashboard`);
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        const data = await res.json();
-        updateStats(data);
-        updateCharts(data);
-      } catch (err) {
-        console.error('Dashboard error:', err);
-        showError('載入數據失敗：' + err.message);
-      }
+      const data = await fetchAPI('/api/dashboard');
+      if (!data) return;
+      updateStats(data);
+      updateCharts(data);
     }
 
-    // 實時資料
+    // 🔄 載入實時資料
     async function loadRealtimeData() {
-      try {
-        const res = await fetch(`${API_BASE}/api/realtime`);
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        const data = await res.json();
-        updateRealtimeStats(data);
-        updateRecentEvents(data.recentEventList);
-      } catch (err) {
-        console.error('Realtime error:', err);
-      }
+      const data = await fetchAPI('/api/realtime');
+      if (!data) return;
+      updateRealtimeStats(data);
+      updateRecentEvents(data.recentEventList);
     }
 
-    // 統計卡
-    function updateStats(data) {
-      document.getElementById('totalEvents').textContent = data.totalEvents?.[0]?.count || 0;
-      document.getElementById('totalUsers').textContent = data.totalUsers?.[0]?.count || 0;
-      document.getElementById('totalSessions').textContent = data.totalSessions?.[0]?.count || 0;
-      document.getElementById('todayEvents').textContent = data.todayEvents?.[0]?.count || 0;
-      document.getElementById('todayUsers').textContent = data.todayUsers?.[0]?.count || 0;
+    // 🧮 更新統計卡
+    function updateStats(d) {
+      document.getElementById('totalEvents').textContent = d.totalEvents?.[0]?.count || 0;
+      document.getElementById('totalUsers').textContent = d.totalUsers?.[0]?.count || 0;
+      document.getElementById('totalSessions').textContent = d.totalSessions?.[0]?.count || 0;
+      document.getElementById('todayEvents').textContent = d.todayEvents?.[0]?.count || 0;
+      document.getElementById('todayUsers').textContent = d.todayUsers?.[0]?.count || 0;
     }
 
-    // 即時統計
-    function updateRealtimeStats(data) {
-      document.getElementById('recentEvents').textContent = data.recentEvents?.[0]?.count || 0;
-      document.getElementById('onlineUsers').textContent = data.onlineUsers?.[0]?.count || 0;
+    // 🔥 更新即時統計
+    function updateRealtimeStats(d) {
+      document.getElementById('recentEvents').textContent = d.recentEvents?.[0]?.count || 0;
+      document.getElementById('onlineUsers').textContent = d.onlineUsers?.[0]?.count || 0;
     }
 
-    // 最近事件
-    function updateRecentEvents(events) {
-      const container = document.getElementById('recentEventList');
-      if (!events || events.length === 0) {
-        container.innerHTML = '<div class="loading">暫無最近事件</div>';
+    // 🧾 更新最近事件列表
+    function updateRecentEvents(list) {
+      const c = document.getElementById('recentEventList');
+      if (!list || list.length === 0) {
+        c.innerHTML = '<div class="loading">暫無最近事件</div>';
         return;
       }
-      container.innerHTML = events.map(e => `
+      c.innerHTML = list.map(e => `
         <div class="event-item">
-          <div>
-            <div class="event-name">${e.event_name}</div>
-            <div class="event-time">${formatTime(e.timestamp)} - ${e.user_id}</div>
-          </div>
-          <div style="font-size:12px;color:#666;">${e.page}</div>
-        </div>`).join('');
+          <div class="event-name">${e.event_name}</div>
+          <div style="font-size:12px;color:#666;">${formatTime(e.timestamp)}・${e.user_id || e.session_id || '匿名'}</div>
+          <div style="font-size:12px;color:#999;">${e.page || ''}</div>
+        </div>
+      `).join('');
     }
 
-    // 更新圖表（呼叫你原本的 update* 函數）
+    // 🪄 更新所有圖表
     function updateCharts(data) {
-      updateTopEventsChart(data.topEvents);
-      updatePageViewsChart(data.pageViews);
-      updateQuizResultsChart(data.quizResults);
-      updateHourlyEventsChart(data.hourlyEvents);
+      updateTopEventsChart(data.topEvents || []);
+      updatePageViewsChart(data.pageViews || []);
+      updateQuizResultsChart(data.quizResults || []);
+      updateHourlyEventsChart(data.hourlyEvents || []);
     }
 
-    // === 原本的 updateTopEventsChart, updatePageViewsChart, updateQuizResultsChart, updateHourlyEventsChart 全保留 ===
-    // （略，完全照你的版本）
+    // === 以下四個圖表函數可沿用你原版本 ===
+    function updateTopEventsChart(rows) {
+      const ctx = document.getElementById('topEventsChart');
+      if (charts.topEventsChart) charts.topEventsChart.destroy();
+      charts.topEventsChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: rows.map(r => r.event_name),
+          datasets: [{
+            data: rows.map(r => r.count),
+            backgroundColor: '#F4A6A0',
+            borderRadius: 6
+          }]
+        },
+        options: {
+          plugins: {
+            legend: { display: false },
+            datalabels: { color: '#fff', anchor: 'end', align: 'top' }
+          },
+          scales: { y: { beginAtZero: true } }
+        }
+      });
+    }
 
-    // 格式化時間
+    function updatePageViewsChart(rows) {
+      const ctx = document.getElementById('pageViewsChart');
+      if (charts.pageViewsChart) charts.pageViewsChart.destroy();
+      charts.pageViewsChart = new Chart(ctx, {
+        type: 'pie',
+        data: {
+          labels: rows.map(r => r.page),
+          datasets: [{
+            data: rows.map(r => r.count),
+            backgroundColor: ['#F4A6A0','#FFD6A5','#FFB5E8','#B5EAD7','#C7CEEA']
+          }]
+        },
+        options: { plugins: { legend: { position: 'bottom' } } }
+      });
+    }
+
+    function updateQuizResultsChart(rows) {
+      const ctx = document.getElementById('quizResultsChart');
+      if (charts.quizResultsChart) charts.quizResultsChart.destroy();
+      charts.quizResultsChart = new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+          labels: rows.map(r => r.result_name),
+          datasets: [{
+            data: rows.map(r => r.count),
+            backgroundColor: ['#F4A6A0','#FFD6A5','#B5EAD7','#C7CEEA','#FFB5E8']
+          }]
+        },
+        options: { plugins: { legend: { position: 'bottom' } } }
+      });
+    }
+
+    function updateHourlyEventsChart(rows) {
+      const ctx = document.getElementById('hourlyEventsChart');
+      if (charts.hourlyEventsChart) charts.hourlyEventsChart.destroy();
+      charts.hourlyEventsChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: rows.map(r => r.hour),
+          datasets: [{
+            data: rows.map(r => r.count),
+            label: '事件數',
+            fill: false,
+            borderColor: '#F4A6A0',
+            tension: 0.3
+          }]
+        },
+        options: { plugins: { legend: { display: false } } }
+      });
+    }
+
+    // 🕒 時間格式化
     function formatTime(t) {
-      return new Date(t).toLocaleTimeString('zh-TW', {hour:'2-digit',minute:'2-digit',second:'2-digit'});
+      return new Date(t).toLocaleTimeString('zh-TW', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
     }
 
-    // 顯示錯誤訊息
+    // ⚠️ 顯示錯誤
     function showError(msg) {
       const c = document.querySelector('.container');
       const d = document.createElement('div');
       d.className = 'error';
       d.textContent = msg;
-      c.insertBefore(d, c.firstChild);
-      setTimeout(() => d.remove(), 5000);
+      c.prepend(d);
+      setTimeout(() => d.remove(), 6000);
     }
 
-    // 初始化
+    // 🚀 初始化
     document.addEventListener('DOMContentLoaded', () => {
       loadDashboardData();
       loadRealtimeData();
-      setInterval(loadRealtimeData, 30000);
-      setInterval(loadDashboardData, 300000);
+      setInterval(loadRealtimeData, 30000);  // 每30秒更新即時資料
+      setInterval(loadDashboardData, 300000); // 每5分鐘刷新整體資料
     });
   </script>
 </body>
