--- a/quiz.html
+++ b/quiz.html
@@ -32,7 +32,7 @@
     <div class="options" id="optionsContainer"></div>
   </div>
 
-  <script src="./public/tracker.js"></script>
+  <script src="./tracker.js"></script>
   <script>
     // 每題漸層背景
     const BG_GRADS = [
@@ -174,3 +174,4 @@
   </script>
 </body>
 </html>
+
