--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   </div>
 
   <!-- 可有可無：若不存在也不會壞 -->
-  <script src="./public/tracker.js"></script>
+  <script src="./config.js"></script>
+  <script src="./tracker.js"></script>
   <script>
     // 安全呼叫，tracker.js 不在也不報錯
     window.addEventListener('DOMContentLoaded', () => {
