--- a/quiz.html
+++ b/quiz.html
@@ -32,6 +32,7 @@
     <div class="options" id="optionsContainer"></div>
   </div>
 
+  <script src="./config.js"></script>
   <script src="./tracker.js"></script>
   <script>
     // 每題漸層背景
@@ -174,4 +175,3 @@
   </script>
 </body>
 </html>
-
