--- a/result.html
+++ b/result.html
@@ -72,7 +72,8 @@
     </div>
   </div>
 
-  <script src="./public/tracker.js"></script>
+  <script src="./config.js"></script>
+  <script src="./tracker.js"></script>
   <script>
     // 讀取 sessionStorage，沒有就回首頁
     const raw = sessionStorage.getItem('quiz_result');
